--- a/package.json
+++ b/package.json
@@ -26,5 +26,11 @@
     "eslint-plugin-import": "^2.26.0",
     "eslint-plugin-prettier": "^4.2.1",
     "prettier": "^2.7.1"
+  },
+  "dependencies": {
+    "axios": "^1.1.3",
+    "fs-extra": "^10.1.0",
+    "https-proxy-agent": "^5.0.1",
+    "socks-proxy-agent": "^7.0.0"
   }
 }
